password visivility edited

--- a/password/password.html
+++ b/password/password.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Password</title>
     <style>
-      html {
+      body {
         display: flex;
         align-items: center;
         justify-content: center;
+        height: 90vh;
+        width: 99vw;
       }
       .login-form {
         display: flex;
@@ -28,7 +30,7 @@
       <p>
         <label for="password"></label>
         <input type="password" id="password" />
-        <input type="checkbox" id="checkpass" onclick="togglePassword()" />
+        <input id="checkpass" type="checkbox" onclick="togglePassword()" />
       </p>
     </div>
 
