password visibility style

--- a/password/password.html
+++ b/password/password.html
@@ -11,18 +11,29 @@
         justify-content: center;
         height: 90vh;
         width: 99vw;
+        background: teal;
       }
       .login-form {
         display: flex;
         align-items: center;
         justify-content: center;
         flex-direction: column;
+
+        padding: 4rem 4rem;
+        background: white;
+        border-radius: 0.5rem;
+      }
+      .login-title {
+        margin: 0 0 1.5rem 0;
+      }
+      #checkpass {
+        position: absolute;
       }
     </style>
   </head>
   <body>
-    <div class="login-form">
-      <h2>Login</h2>
+    <form action="" class="login-form">
+      <h2 class="login-title">Login</h2>
       <p>
         <label for="username"></label>
         <input type="text" id="username" />
@@ -32,7 +43,8 @@
         <input type="password" id="password" />
         <input id="checkpass" type="checkbox" onclick="togglePassword()" />
       </p>
-    </div>
+      <button type="submit">Just do it!</button>
+    </form>
 
     <script>
       function togglePassword() {
